--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -1,7 +1,8 @@
 name: CI Build LedFx
 
 on:
-  [push,pull_request]
+  push:
+  pull_request:
 
 jobs:
   build-ledfx-linux:
@@ -9,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [3.8,3.9,3.10]
+        python: ["3.8","3.9","3.10"]
     steps:
       - name: Check out code from GitHub
         uses: actions/checkout@v2
@@ -22,20 +23,10 @@ jobs:
         uses: actions/setup-python@v2.2.1
         with:
           python-version: ${{ matrix.python }}
-      - name: Install pypa/build
-        run: >-
-          python -m
-          pip install
-          build
-          --user
-      - name: Build a binary wheel and a source tarball
-        run: >-
-          python -m
-          build
-          --sdist
-          --wheel
-          --outdir dist/
-          .
+      - name: Build a binary wheel
+        run: |
+          python -m pip install --user -U pip wheel setuptools
+          python setup.py bdist_wheel
       - name: Publish distribution 📦 to Test PyPI
         uses: pypa/gh-action-pypi-publish@master
         with:
@@ -52,7 +43,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python: [3.8,3.9,3.10]
+        python: ["3.8","3.9","3.10"]
     steps:
       - name: Check out code from GitHub
         uses: actions/checkout@v2
@@ -61,24 +52,14 @@ jobs:
         uses: actions/setup-python@v2.2.1
         with:
           python-version: ${{ matrix.python }}
-      - name: Install pypa/build
-        run: >-
-          python -m
-          pip install
-          build
-          --user
-      - name: Build a binary wheel and a source tarball
-        run: >-
-          python -m
-          build
-          --sdist
-          --wheel
-          --outdir dist/
-          .
+      - name: Build a binary wheel
+        run: |
+          python -m pip install --user -U pip wheel setuptools
+          python setup.py bdist_wheel
       - name: Publish distribution 📦 to Test PyPI
         uses: pypa/gh-action-pypi-publish@master
         with:
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          password: ${{ secrets.SHAUNS_TESTPYPI_API_KEY }}
           repository_url: https://test.pypi.org/legacy/
       - name: Publish distribution 📦 to PyPI
         if: startsWith(github.ref, 'refs/tags')
@@ -86,12 +67,14 @@ jobs:
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
 
+
+
   build-ledfx-osx:
     name: Build LedFx (OS X)
     runs-on: macos-latest
     strategy:
       matrix:
-        python: [3.8,3.9,3.10]
+        python: ["3.8","3.9","3.10"]
     steps:
       - name: Check out code from GitHub
         uses: actions/checkout@v2
@@ -103,24 +86,15 @@ jobs:
         uses: actions/setup-python@v2.2.1
         with:
           python-version: ${{ matrix.python }}
-      - name: Install pypa/build
-        run: >-
-          python -m
-          pip install
-          build
-          --user
-      - name: Build a binary wheel and a source tarball
-        run: >-
-          python -m
-          build
-          --sdist
-          --wheel
-          --outdir dist/
-          .
+      - name: Build a binary wheel
+        run: |
+          python -m pip install numpy --compile --pre
+          python -m pip install --user -U pip wheel setuptools
+          python setup.py bdist_wheel
       - name: Publish distribution 📦 to Test PyPI
         uses: pypa/gh-action-pypi-publish@master
         with:
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          password: ${{ secrets.SHAUNS_TESTPYPI_API_KEY }}
           repository_url: https://test.pypi.org/legacy/
       - name: Publish distribution 📦 to PyPI
         if: startsWith(github.ref, 'refs/tags')
