Add conditional uploads

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -28,10 +28,10 @@ jobs:
           python -m pip install --user -U pip wheel setuptools
           python setup.py bdist_wheel
       - name: Upload Artifacts
-      - uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v2
         with:
-          name: ledfx-wheels
-          path: /dist
+            name: ledfx-wheels
+            path: /dist
 
   build-ledfx-windows:
     name: Build LedFx (Windows)
@@ -52,7 +52,7 @@ jobs:
           python -m pip install --user -U pip wheel setuptools
           python setup.py bdist_wheel
       - name: Upload Artifacts
-      - uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v2
         with:
           name: ledfx-wheels
           path: /dist
@@ -79,7 +79,7 @@ jobs:
           python -m pip install --user -U pip wheel setuptools
           python setup.py bdist_wheel
       - name: Upload Artifacts
-      - uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v2
         with:
           name: ledfx-wheels
           path: /dist
@@ -106,23 +106,24 @@ jobs:
           yarn build
         env:
           CI: true
-  # upload-test-wheels:
-  #   name: Upload LedFx Wheels
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Gets Artifacts
-  #     - uses: actions/download-artifact@v2
-  #         with:
-  #           name: ledfx-wheels
-  #     - name: Publish distribution 📦 to Test PyPI
-  #       uses: pypa/gh-action-pypi-publish@master
-  #       with:
-  #         password: ${{ secrets.SHAUNS_TESTPYPI_API_KEY }}
-  #         repository_url: https://test.pypi.org/legacy/
-  #     - name: Publish distribution 📦 to PyPI
-  #       if: startsWith(github.ref, 'refs/tags')
-  #       uses: pypa/gh-action-pypi-publish@master
-  #       with:
-  #         password: ${{ secrets.PYPI_API_TOKEN }}
+  upload-test-wheels:
+    needs: [build-ledfx-linux, build-ledfx-windows, build-ledfx-osx,build-ledfx-frontend]
+    name: Upload LedFx Wheels
+    runs-on: ubuntu-latest
+    steps:
+      - name: Gets Artifacts
+      - uses: actions/download-artifact@v2
+        with:
+          name: ledfx-wheels
+      - name: Publish distribution 📦 to Test PyPI
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          password: ${{ secrets.SHAUNS_TESTPYPI_API_KEY }}
+          repository_url: https://test.pypi.org/legacy/
+      - name: Publish distribution 📦 to PyPI
+        if: startsWith(github.ref, 'refs/tags')
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
 
 
