--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build a binary wheel
         run: |
           python -m pip install --user -U pip wheel setuptools
-          python setup.py bdist_wheel
+          python setup.py -q sdist bdist_wheel
       - name: Upload Artifacts
         uses: kittaakos/upload-artifact-as-is@v0
         with:
@@ -112,8 +112,6 @@ jobs:
         uses: actions/checkout@v2
       - name: Gets Artifacts
         uses: actions/download-artifact@v2
-      - name: Unzip Wheels
-        run: unzip *
       - name: Publish distribution 📦 to Test PyPI
         uses: pypa/gh-action-pypi-publish@master
         with:
