Remove matrix build since we build pure py wheels

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -4,14 +4,19 @@ on:
   push:
   pull_request:
 
+env:
+  DEFAULT_PYTHON: "3.10"
+
 jobs:
   build-ledfx-linux:
     name: Build LedFx (Ubuntu)
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python: ["3.8","3.9","3.10"]
     steps:
+      - name: Set up Python ${{ env.DEFAULT_PYTHON }}
+        id: python
+        uses: actions/setup-python@v2.2.1
+        with:
+            python-version: ${{ env.DEFAULT_PYTHON }}
       - name: Check out code from GitHub
         uses: actions/checkout@v2
       - name: Install build dependencies
@@ -27,93 +32,6 @@ jobs:
         run: |
           python -m pip install --user -U pip wheel setuptools
           python setup.py -q sdist bdist_wheel
-      - name: Upload Artifacts
-        uses: kittaakos/upload-artifact-as-is@v0
-        with:
-            path: dist/
-
-  build-ledfx-windows:
-    name: Build LedFx (Windows)
-    runs-on: windows-latest
-    strategy:
-      matrix:
-        python: ["3.8","3.9","3.10"]
-    steps:
-      - name: Check out code from GitHub
-        uses: actions/checkout@v2
-      - name: Setup Python ${{ matrix.python }}
-        id: python
-        uses: actions/setup-python@v2.2.1
-        with:
-          python-version: ${{ matrix.python }}
-      - name: Build a binary wheel
-        run: |
-          python -m pip install --user -U pip wheel setuptools
-          python setup.py bdist_wheel
-      - name: Upload Artifacts
-        uses: kittaakos/upload-artifact-as-is@v0
-        with:
-            path: dist/
-  build-ledfx-osx:
-    name: Build LedFx (OS X)
-    runs-on: macos-latest
-    strategy:
-      matrix:
-        python: ["3.8","3.9","3.10"]
-    steps:
-      - name: Check out code from GitHub
-        uses: actions/checkout@v2
-      - name: Install build dependencies
-        run: |
-          brew install portaudio
-      - name: Setup Python ${{ matrix.python }}
-        id: python
-        uses: actions/setup-python@v2.2.1
-        with:
-          python-version: ${{ matrix.python }}
-      - name: Build a binary wheel
-        run: |
-          python -m pip install numpy --compile --pre
-          python -m pip install --user -U pip wheel setuptools
-          python setup.py bdist_wheel
-      - name: Upload Artifacts
-        uses: kittaakos/upload-artifact-as-is@v0
-        with:
-            path: dist/
-  build-ledfx-frontend:
-    name: Build LedFx Frontend
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [10, 12, 14]
-    steps:
-      - name: Check out code from GitHub
-        uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Install yarn
-        run: |
-          npm install -g yarn
-      - name: Run yarn install and build
-        run: |
-          cd frontend
-          yarn
-          yarn build
-        env:
-          CI: true
-  upload-test-wheels:
-    needs: [build-ledfx-linux, build-ledfx-windows, build-ledfx-osx]
-    name: Upload LedFx Wheels
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out code from GitHub
-        uses: actions/checkout@v2
-      - name: Gets Artifacts
-        uses: actions/download-artifact@v2
-        with:
-          path: dist/
       - name: Publish distribution 📦 to Test PyPI
         uses: pypa/gh-action-pypi-publish@master
         with:
