--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -4,9 +4,6 @@ on:
   push:
   pull_request:
 
-env:
-  DEFAULT_PYTHON: "3.10"
-
 jobs:
   build-ledfx-linux:
     name: Build LedFx (Ubuntu)
@@ -18,11 +15,11 @@ jobs:
         run: |
           sudo apt-get update && sudo apt-get install -y \
           gcc libatlas3-base portaudio19-dev
-      - name: Setup Python ${{ matrix.python }}
+      - name: Setup Python
         id: python
         uses: actions/setup-python@v2.2.1
         with:
-          python-version: ${{ matrix.python }}
+          python-version: "3.10"
       - name: Build a binary wheel
         run: |
           python -m pip install --user -U pip wheel setuptools
