--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -11,6 +11,21 @@ jobs:
     steps:
       - name: Check out code from GitHub
         uses: actions/checkout@v2
+      - name: Setup sentry config for test
+        shell: bash
+        env:
+          SENTRY_DSN: ${{ secrets.SENTRY_DSN_BETA }}
+        run: |
+          sed -i 's,DSN,'"$SENTRY_DSN"',' ./ledfx/sentry_config.py
+      - name: Create sentry beta release
+        uses: getsentry/action-release@v1
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: ledfx-org
+          SENTRY_PROJECT: ledfx-betas-v2
+        with:
+          environment: development
+          finalize: false
       - name: Install build dependencies
         run: |
           sudo apt-get update && sudo apt-get install -y \
@@ -27,10 +42,19 @@ jobs:
       - name: Publish distribution 📦 to Test PyPI
         uses: pypa/gh-action-pypi-publish@master
         with:
+          user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
+
+      - name: Setup sentry config for release
+        shell: bash
+        env:
+          SENTRY_DSN: ${{ secrets.SENTRY_DSN_PYPI }}
+        run: |
+          sed -i 's,DSN,'"$SENTRY_DSN"',' ./ledfx/sentry_config.py
       - name: Publish distribution 📦 to PyPI
         if: startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@master
         with:
+          user: __token__
           password: ${{ secrets.SHAUNS_TESTPYPI_API_KEY }}
